Updated the header displacement. Fixed linked with images in markdown (wrapped the element so that it links to the section they are in). Cleaned some comments.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -445,7 +445,7 @@ kbd {
 .navbar-container {
     flex: 1 1 auto;
     overflow: hidden;
-    height: 25px;
+    height: 38px;
 }
 
 .grid-icon-boxes {
@@ -1322,4 +1322,3 @@ to be custom HTML.
   grid-template-columns: auto auto auto;
   grid-column-gap: 31%;
 }
-
